styles/style.css
*, *::before, *::after {
    box-sizing: inherit;
}

html {
    box-sizing: border-box;
    font-family: 'Gochi Hand';
    color: #000000;
    font-size: 14px;
    
}

#wrapper{
    width: 1200px;
    height: 800px;
    padding: 7rem;
    padding-bottom: 9rem;
    display: grid;
    grid-template-columns: 450px 1fr;
    grid-template-rows: 450px 1fr;
    grid-template-areas: 
    "board interface"
    "below-board below-interface";
    background-image: url("../whiteboard.svg");
    background-repeat: no-repeat;
}


#board-container{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;
    gap:3px;
    width: 450px;
    height: 450px;
    font-size: 120px;
    background-image: url("../board.jpg");
    opacity: .7;
    /* background-color: rgb(14, 12, 12); */
}

#board-container > div {
    display: grid;
    place-content: center;
    transition: all .5s;
    /* background-color: white; */
    margin: 0;
    padding: 0;
}

#interface{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
    padding: 5.5rem 4rem 1.5rem 5rem;
    font-size: 30px;
    width: 100%;
}

#AI-btn{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 2rem;
    width: 50px;
    height: 35px;
    border: solid;
    color: black;
}

.active{
    background-color: green;
}

.inactive{
    background-color: red;
}

#below-board,
#eraser{
    font-size: 25px;
    display: flex;
    justify-content: center;
    align-items: center;

}

.player{
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
    width: 100%;
}

.score-container{
    display: flex;
}

#player2{
    margin-bottom: 1.8rem;
}

#testdiv{
    
    width: 60px;
}

.litup{
    font-weight: 900;
    border-color: black;
    box-shadow: 0 0 20px black;
}

.currentplayer{
    background-color: grey;
}

.x{
    stroke-dasharray: 601;
    fill: white;
    animation: .4s fillSvgX, linear;
}

@keyframes fillSvgX{
    0%{
        stroke-dashoffset: 601;
    }

    100%{
        stroke-dashoffset: 0;
    }
}

.o{
    stroke-dasharray: 455;
    fill: white;
    animation: .4s fillSvgO, linear;
}

@keyframes fillSvgO{
    0%{
        stroke-dashoffset: 455;
    }

    100%{
        stroke-dashoffset: 0;
    }
}

.stroke1, 
.stroke2, 
.stroke3,
.stroke4{
    stroke-dasharray: 70;
    animation: .4s strokeOne, linear;
}

@keyframes strokeOne{
    0%{
        stroke-dashoffset: 70;
    }

    100%{
        stroke-dashoffset: 0;
    }
}

.stroke5{
    stroke-dasharray: 172;
    animation: .4s strokeFive, linear;
}

@keyframes strokeFive{
    0%{
        stroke-dashoffset: 172;
    }

    100%{
        stroke-dashoffset: 0;
    }
}

